--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -1,16 +1,16 @@
 .dashLink-cont {
-  /* margin-top: 100px; */
-  background-color: grey;
-  box-shadow: 5px 5px 5px rgb(124, 123, 123);
-  height: 94%;
-  width: 230px;
-  /* height: 100%; */
-  position: fixed;
-  top: 0;
-  left: 0;
-  margin: 20px;
-  border-radius: 5px;
-  /* margin-top: 30px; */
+  background: linear-gradient(195deg, rgb(66, 66, 74), rgb(25, 25, 25));
+  background: linear-gradient(#444, #111);
+
+  width: 22rem;
+  height: 100%;
+  border-radius: 11px;
+  padding: 0 1.8rem;
+
+  display: flex;
+  flex-direction: column;
+  /* align-items: start; */
+  /* justify-content: center; */
 }
 
 .dashLink-logo {
@@ -22,20 +22,69 @@
   margin-top: 20px;
 }
 .dashLink {
+  /* flex-grow: 1; */
+  /* width: 100%; */
+  font-size: 1.4rem;
+  font-weight: 400;
+  /* padding: 1.8rem 0px; */
+  border-radius: 6px;
+
   color: white;
   display: flex;
   flex-direction: row;
   justify-content: center;
   text-align: center;
-  background-color: rgb(157, 150, 150);
-  font-size: 20px;
   margin-top: 20px;
   cursor: pointer;
-  border-radius: 30px;
   /* width: 100px; */
   transition: background-color 0.3s ease;
-
 }
 .dashLink:hover {
-  background-color: rgb(46, 41, 41);
+  background-color: rgba(143, 142, 142, 0.527);
+}
+
+.acc-payable--section {
+  display: flex;
+  justify-content: start;
+  gap: 5rem;
+}
+
+.line {
+  height: 1px;
+  background-color: #f4f4f4;
+  /* margin: 1.4rem 0; */
+
+  /* width: 200px;
+  border-top: 0px solid rgba(0, 0, 0, 0.08);
+  border-right: 0px solid rgba(0, 0, 0, 0.08);
+  border-left: 0px solid rgba(0, 0, 0, 0.08);
+  border-bottom: none;
+  height: 1px;
+  margin: 1rem 0px;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0),
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0)
+  ) !important; */
+}
+
+.dashLink > a {
+  text-decoration: none;
+  color: #f4f4f4;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+
+  padding: 1.8rem 3rem;
+
+  text-align: left;
+
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.dashLink > .active {
+  background-color: rgb(26, 115, 232);
 }
