--- a/src/pages/Payable.css
+++ b/src/pages/Payable.css
@@ -24,10 +24,16 @@
 } */
 
 .table-cont {
-  margin-left: 280px;
-  margin-top: 4%;
   position: relative;
   width: calc(100vw - 400px);
+  background-color: white;
+
+  box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.25rem 0.375rem -0.0625rem,
+    rgba(0, 0, 0, 0.06) 0rem 0.125rem 0.25rem -0;
+  border-radius: 11px;
+  overflow: hidden;
+
+  flex-grow: 1;
 }
 
 .table-cont table {
@@ -36,17 +42,20 @@
   overflow: hidden;
   border-radius: 5px;
   /* margin-bottom: 200px; */
+  border-radius: 15px;
 }
 
 .table-cont thead {
-  background-color: #f5f5f5;
+  background-color: white;
 }
 
 .table-cont th,
 .table-cont td {
   padding: 18px 20px;
   text-align: left;
+  font-size: 1.2rem;
   /* border-bottom: 1px solid #ddd; */
+  border-bottom: 1px solid rgba(52, 71, 103, 0.103);
 }
 
 .table-cont th {
@@ -71,17 +80,70 @@
 
 .table-box button {
   padding: 7px;
-  border-radius: 5px;
+  border-radius: 4px;
   outline: none;
-  border: 1px solid #ccc;
-  margin-left: 280px;
-  margin-top: 100px;
+  border: none;
+  /* margin-left: 280px; */
+  /* margin-top: 100px; */
   cursor: pointer;
-  width: 120px;
-  font-size: 15px;
+  /* width: 120px; */
+  font-size: 1.4rem;
   /* justify-content: left; */
+  color: white;
+  font-weight: 400;
+  background-color: rgb(26, 115, 232);
+
+  display: flex;
+  gap: 0.6rem;
 }
 .table-box button:hover {
   border-color: rgb(162, 156, 156);
-  /* box-shadow: 5px 5px 5px rgb(124, 123, 123); */
+}
+
+.acc-payable--section {
+  display: flex;
+  justify-content: start;
+  gap: 3rem;
+
+  height: calc(95%);
+  padding: 1.6em 2rem;
+}
+
+.navigation-indicator {
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: rgb(52, 71, 103);
+
+  margin-bottom: 3rem;
+}
+
+.table--optns {
+  padding: 2rem 2rem 2rem 2rem;
+
+  display: flex;
+  justify-content: space-between;
+  /* background-color: #f4f4f4; */
+  /* margin-bottom: 3rem; */
+}
+
+.table--optns > p {
+  font-size: 2.4rem;
+  font-weight: 500;
+  letter-spacing: 0.4px;
+  color: rgb(52, 71, 103);
+}
+
+.add-icon {
+  color: white;
+}
+
+.main--payable {
+  display: flex;
+  flex-direction: column;
+
+  padding: 2rem 0rem 0rem 0rem;
+}
+
+.line {
+  height: 1px;
 }
