--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   margin-left: 10px;
   margin-bottom: 30px;
   margin-top: 20px;
