--- a/src/Components/Piechart.css
+++ b/src/Components/Piechart.css
@@ -4,8 +4,8 @@
   align-items: center;
   padding: 20px;
   background-color: #f5f7fa;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border-radius: 11px;
+  /* box-shadow:/ 0 4px 12px rgba(0, 0, 0, 0.1); */
   max-width: 800px;
   margin: 0 auto;
 }
