--- a/src/pages/Payable.css
+++ b/src/pages/Payable.css
@@ -6,7 +6,7 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.25rem 0.375rem -0.0625rem,
     rgba(0, 0, 0, 0.06) 0rem 0.125rem 0.25rem -0;
   border-radius: 11px;
-  overflow: hidden;
+  overflow-y: scroll;
 
   flex-grow: 1;
 }
@@ -14,7 +14,7 @@
 .table-cont table {
   width: 100%;
   border-collapse: collapse;
-  overflow-y: hidden;
+  overflow-y: scroll;
   border-radius: 5px;
   /* margin-bottom: 200px; */
   border-radius: 15px;
@@ -187,7 +187,6 @@
 .main--payable {
   display: flex;
   flex-direction: column;
-
   padding: 2rem 0rem 0rem 0rem;
 }
 
