--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -76,11 +76,8 @@
   width: 100%;
   height: 100%;
   border-radius: 6px;
-
   padding: 1.8rem 3rem;
-
   text-align: left;
-
   display: flex;
   align-items: center;
   gap: 1.6rem;
@@ -95,16 +92,7 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 20px;
-}
-
-.empCard {
-  background-color: #ffffff;
-  padding: 15px 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-  text-align: center;
-  flex: 1;
-  margin: 0 10px;
+  gap: 1rem;
 }
 
 .header {
