--- a/src/Components/Piechart.css
+++ b/src/Components/Piechart.css
@@ -6,29 +6,26 @@
   background-color: #f5f7fa;
   border-radius: 11px;
   /* box-shadow:/ 0 4px 12px rgba(0, 0, 0, 0.1); */
-  max-width: 800px;
+  width: 350px;
   margin: 0 auto;
-}
-
-.empCards {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-bottom: 20px;
+  gap: 3rem;
 }
 
 .empCard {
   background-color: #ffffff;
-  padding: 15px 20px;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   text-align: center;
-  flex: 1;
-  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* gap: 1rem; */
+  width: 100%;
+  padding: 1rem;
 }
 
 .header {
-  font-size: 16px;
+  font-size: 12px !important;
   color: #333333;
   margin-bottom: 10px;
 }
@@ -80,4 +77,52 @@
 .yearlyEmp {
   width: 100%;
   max-width: 600px;
+}
+
+.header {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.counter {
+  font-size: 24px;
+  color: #333;
+}
+
+.pie-chart-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  gap: 3rem;
+}
+
+.pie-chart-container {
+  flex: 1;
+}
+
+.legend-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.legend-color {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.legend-label {
+  font-size: 14px;
+  color: #333;
 }
